# spinning-wheel

./: .gitignore  LICENSE  README.es.md  README.md  USER_GUIDE.es.md  USER_GUIDE.md  index.html  package-lock.json  package.json
.github/workflows/: tauri-build.yml
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/hooks/: useAudio.ts
src/i18n/locales/: en.json  es.json
src/theme/: m3-theme.ts
