[package]
name = "spinning-wheel"
version = "1.0.0"
description = "Spinning Wheel desktop app built with Tauri"
authors = ["jir"]
edition = "2021"

[lib]
name = "spinning_wheel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
